--- a/src/main/resources/fr_FR.yml
+++ b/src/main/resources/fr_FR.yml
@@ -292,7 +292,7 @@ menus:
   
   #-------------------- Vitrine --------------------#
   shopfront:
-    title: "&7%shop%"
+    title: "&8%shop%"
     #Placeholders : %item_name%, %mode%
     item_name: "&f%item_name% %mode%"
     detail_suffix: "&8(Détails)"
@@ -714,6 +714,19 @@ menus:
         - "&7Ends: &e%discount_end%"
         - ""
         - "&7>> Click to edit"
+      custom_amount_enabled:
+        material: LIME_TERRACOTTA
+        slot: 40
+        name: "&eQuantité personnalisée&7: &aActivée"
+        lore:
+          - "&7Cliquer pour désactiver la quantité personnalisée"
+      custom_amount_disabled:
+        material: RED_TERRACOTTA
+        slot: 40
+        name: "&eQuantité personnalisée&7: &cDésactivée"
+        lore:
+          - "&7Cliquer pour activer la quantité personnalisée"
+
   confirm_action:
     title: "&8Êtes-vous sûr ?"
     size: 27
@@ -727,6 +740,60 @@ menus:
         material: RED_TERRACOTTA
         slot: 14
         name: "&cNon, annuler"
+  buy_item:
+    title_buy: "&8Acheter objet"
+    title_sell: "&8Vendre objet"
+    title_trade: "&8Échanger objet"
+    title_command: "&8Acheter commande"
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 14, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    back_slot: 26
+    size: 27
+    confirm_slot: 13
+    items:
+      increase_one:
+        material: LIME_TERRACOTTA
+        slot: 15
+        name: "&aAugmenter de 1"
+        lore:
+          - "&7Cliquer pour augmenter la quantité d'un"
+      increase_stack:
+        material: LIME_TERRACOTTA
+        slot: 16
+        amount: 64
+        name: "&aAugmenter par pile"
+        lore:
+          - "&7Cliquer pour augmenter la quantité de 64"
+      increase_max:
+        material: EMERALD_BLOCK
+        slot: 4
+        name: "&aAugmenter au maximum"
+        lore:
+          - "&7Cliquer pour augmenter la quantité au maximum"
+      decrease_one:
+        material: RED_TERRACOTTA
+        slot: 10
+        name: "&cDiminuer de 1"
+        lore:
+          - "&7Cliquer pour diminuer la quantité d'un"
+      decrease_stack:
+        material: RED_TERRACOTTA
+        slot: 11
+        amount: 64
+        name: "&cDiminuer par pile"
+        lore:
+          - "&7Cliquer pour diminuer la quantité de 64"
+      toggle_sell:
+        material: BOOK
+        slot: 22
+        name: "&7Vendre | &eAcheter"
+        lore:
+          - "&7Cliquer pour passer à la vente"
+      toggle_buy:
+        material: BOOK
+        name: "&eVendre &7| Acheter"
+        slot: 22
+        lore:
+          - "&7Cliquer pour passer à l'achat"
 
   
   
